--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,19 +3,23 @@ spring:
     name: model-prediction
 
 model:
-  onnx:
-    model-path: classpath:model/criteo_ctr_model.onnx
-    preprocessor-path: classpath:model/criteo_preprocessor.pkl
-    test-data-path: classpath:data/test.txt
+  test:
+    data-path: classpath:data/test.txt
+    separator: "\t"  # 假设test.txt是TSV格式
+  ctr_v1:
+    model-path: classpath:model/ctr/202509v1/criteo_ctr_model.onnx
+    preprocessor-path: classpath:model/ctr/202509v1/criteo_preprocessor.pkl
+    input-node: criteo_features
+    output-node: ctr_prob
     batch-size: 100
     optimization-level: 1
-  schedule:
+    cron: "*/10 * * * * ?"  # 每10秒执行一次
+  ctr_v2:
+    model-path: classpath:model/ctr/202509v2/criteo_ctr_model.onnx
+    preprocessor-path: classpath:model/ctr/202509v2/criteo_preprocessor.json
+    input-node: criteo_features
+    output-node: ctr_prob
+    batch-size: 100
+    optimization-level: 1
     cron: "*/10 * * * * ?"  # 每10秒执行一次
 
-logging:
-  level:
-    org:
-      springframework:
-        web: info
-  file:
-    path: /var/logs/dsp-home/logs
