--- a/pom.xml
+++ b/pom.xml
@@ -63,9 +63,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>2.0.16</version>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.49</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
