--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,4 +21,11 @@ model:
     output-node: ctr_prob
     batch-size: 100
     optimization-level: 1
+  ctr_v3:
+    model-path: classpath:model/ctr/202509v3/criteo_ctr_model.onnx
+    preprocessor-path: classpath:model/ctr/202509v3/criteo_preprocessor.json
+    input-node: criteo_features
+    output-node: ctr_prob
+    batch-size: 100
+    optimization-level: 1
 
