--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,21 @@
 spring:
   application:
-    name: model-prediction
+    name: dsp-model-prediction
 
 model:
-  test:
-    data-path: classpath:data/test.txt
-    separator: "\t"  # test.txt是TSV格式
-  ctr_v1:
-    model-path: classpath:model/ctr/202509v1/criteo_ctr_model.onnx
-    preprocessor-path: classpath:model/ctr/202509v1/criteo_preprocessor.json
-    input-node: criteo_features
-    output-node: ctr_prob
-    batch-size: 100
-    optimization-level: 1
-  ctr_v2:
-    model-path: classpath:model/ctr/202509v2/ctr_deepfm_model.onnx
-    preprocessor-path: classpath:model/ctr/202509v2/ctr_preprocessor.json
-    input-node: features
-    output-node: click_prob
-    batch-size: 100
-    optimization-level: 1
-
+  deepfm:
+    ctr:
+      v1:
+        model-path: classpath:model/ctr/v1/criteo_ctr_model.onnx
+        preprocessor-path: classpath:model/ctr/v1/criteo_preprocessor.json
+        input-node: criteo_features
+        output-node: ctr_prob
+        batch-size: 100
+        optimization-level: 1
+      v2:
+        model-path: classpath:model/ctr/v2/ctr_deepfm_model.onnx
+        preprocessor-path: classpath:model/ctr/v2/ctr_preprocessor.json
+        input-node: features
+        output-node: click_prob
+        batch-size: 100
+        optimization-level: 1
